--- a/res/scss/_colors.scss
+++ b/res/scss/_colors.scss
@@ -27,4 +27,4 @@ $course-title: $darker-gray;
 $course-subtitle: $medium-gray;
 $course-content: $darker-gray;
 $price-bg: $pink-2;
-$price-enroll: $pink-3;
+$price-enrol: $pink-3;
