--- a/res/css/style.css
+++ b/res/css/style.css
@@ -6486,7 +6486,7 @@ nav {
 .courseSection,
 .groupSection,
 .privateSection,
-.testemonialSection,
+.testimonialSection,
 .actionBtnSection {
   margin-right: auto;
   margin-left: auto;
@@ -6757,7 +6757,7 @@ nav {
       font-size: 14px;
       font-weight: 500; }
 
-.enrollBtn,
+.enrolBtn,
 .seeMoreBtn {
   flex: 0 0 14.3333333333%;
   -webkit-border-radius: 0;
@@ -6770,14 +6770,14 @@ nav {
   font-weight: 600;
   font-size: 16px; }
   @media screen and (max-width: 414px) {
-    .enrollBtn,
+    .enrolBtn,
     .seeMoreBtn {
       font-size: 13px; } }
 
-.enrollBtn {
+.enrolBtn {
   background: #da0684;
   color: #fbfbfb; }
-  .enrollBtn:hover, .enrollBtn:focus, .enrollBtn:active {
+  .enrolBtn:hover, .enrolBtn:focus, .enrolBtn:active {
     background: #b7066f; }
 
 .seeMoreBtn {
@@ -6961,7 +6961,12 @@ nav {
     text-transform: uppercase;
     font-family: "Raleway", sans-serif;
     font-size: 25px;
-    color: #585858; }
+    color: #585858;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s; }
     .privateCol h1 .highlight {
       font-weight: 800; }
   @media screen and (max-width: 991px) {
@@ -6974,42 +6979,65 @@ nav {
       flex: 0 0 100%;
       max-width: 100%;
       max-width: 410px; } }
+  .privateCol:hover > .privateImg {
+    background: rgba(236, 0, 140, 0.5); }
+  .privateCol:hover > h1 {
+    text-decoration: underline; }
 
 .privateImg {
   max-width: 100%;
-  /* temp solution */
-  height: 380px;
-  object-fit: cover;
-  /* uncomment this block and remove block above when photos are square
-    height: auto;
-    */
+  overflow: hidden;
   -webkit-border-radius: 50% 50% 10px 50%;
   -moz-border-radius: 50% 50% 10px 50%;
   -ms-border-radius: 50% 50% 10px 50%;
   -o-border-radius: 50% 50% 10px 50%;
-  border-radius: 50% 50% 10px 50%; }
+  border-radius: 50% 50% 10px 50%;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s; }
+  .privateImg#privateBehaviour {
+    background-image: url("../../client_res/img/private/dogBehaviour.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; }
+  .privateImg#privateSports {
+    background-image: url("../../client_res/img/private/dogSports.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; }
+  .privateImg#privateTraining {
+    background-image: url("../../client_res/img/private/advancedTraining.png");
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+    background-size: 150%; }
+  .privateImg:after {
+    content: '';
+    display: block;
+    padding-bottom: 100%; }
 
-.testemonialSection {
+.testimonialSection {
   padding-top: 55px;
   max-width: 1280px; }
-  .testemonialSection h1 {
+  .testimonialSection h1 {
     margin-bottom: 18px;
     font-family: "Raleway", sans-serif;
     font-size: 35px;
     text-transform: uppercase;
     text-align: center;
     color: #ec008c; }
-    .testemonialSection h1 .highlight {
+    .testimonialSection h1 .highlight {
       font-weight: 800; }
 
-.testemonialRow {
+.testimonialRow {
   display: flex;
   flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
   justify-content: flex-end; }
 
-.testemonialCol {
+.testimonialCol {
   position: relative;
   width: 100%;
   min-height: 1px;
@@ -7018,27 +7046,27 @@ nav {
   flex: 0 0 50.8928571429%;
   max-width: 50.8928571429%; }
   @media screen and (max-width: 991px) {
-    .testemonialCol {
+    .testimonialCol {
       flex: 0 0 100%;
       max-width: 100%; } }
 
-.carouselTestemonial {
+.carouselTestimonial {
   padding-top: 50px; }
 
-.testemonialCarouselItem {
+.testimonialCarouselItem {
   padding: 0 15%;
   text-align: center;
   font-style: italic;
   font-weight: 600;
   font-size: 22px; }
 
-.testemonialCarouselCaption p {
+.testimonialCarouselCaption p {
   margin: 22px 0 14px;
   color: #585858; }
   @media screen and (max-width: 575px) {
-    .testemonialCarouselCaption p {
+    .testimonialCarouselCaption p {
       font-size: 18px; } }
-.testemonialCarouselCaption h1 {
+.testimonialCarouselCaption h1 {
   font-family: "Open Sans", sans-serif;
   font-style: italic;
   font-weight: 700;
@@ -7046,7 +7074,7 @@ nav {
   text-transform: capitalize;
   color: #777; }
 
-.testemonialCarouselControl {
+.testimonialCarouselControl {
   position: absolute;
   top: 0;
   bottom: 0;
