--- a/res/css/style.css
+++ b/res/css/style.css
@@ -7366,10 +7366,12 @@ nav {
       max-width: 100%; } }
 
 .subscriptionBox {
+  padding-left: 15px;
   width: 100%;
   height: 57px;
   border: none;
   background: rgba(255, 255, 255, 0.1);
+  color: #fff;
   -webkit-box-shadow: 0 2px 3px 3px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 2px 3px 3px rgba(0, 0, 0, 0.1);
   -ms-box-shadow: 0 2px 3px 3px rgba(0, 0, 0, 0.1);
