--- a/res/scss/style.scss
+++ b/res/scss/style.scss
@@ -1113,10 +1113,12 @@ nav {
 }
 
 .subscriptionBox {
+  padding-left: 15px;
   width: 100%;
   height: 57px;
   border: none;
   background: rgba(255, 255, 255, 0.1);
+  color: #fff;
   @include crossShadow(0 2px 3px 3px rgba(0, 0, 0, 0.1));
 }
 
